feat(lint): add jsHint Lint

--- a/app/index.html
+++ b/app/index.html
@@ -498,10 +498,10 @@
 </div>
 <!-- Modal send message -->
 
-<script src="js/jquery-2.2.3.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
+<script src="assets/jquery/jquery-2.2.3.min.js"></script>
+<script src="assets/bootstrap/bootstrap.min.js"></script>
 
-<script src="js/jquery.placeholder.min.js"></script>
+<script src="assets/jquery-placeholder/jquery.placeholder.min.js"></script>
 
 <!--Isotope-->
 <script src="assets/isotope/imagesloaded.pkgd.min.js"></script>
