feat(bing-seo): add meta and .xml for seo on bing

--- a/app/index.html
+++ b/app/index.html
@@ -40,6 +40,9 @@
   <meta name="msapplication-TileImage" content="media/icons/ms-icon-144x144.png">
   <meta name="msapplication-TileColor" content="#2F3BA2">
 
+  <!-- add bing seo -->
+  <meta name="msvalidate.01" content="FF5F44510FB4482420BC1397C1B8A214" />
+
   <!-- favicon -->
   <!-- Place favicon.ico in the root directory -->
   <link rel="icon" type="image/png" sizes="32x32" href="media/icons/favicon-32x32.png">
