fix(index): only async custom js

--- a/app/index.html
+++ b/app/index.html
@@ -68,7 +68,7 @@
       <div class="col-md-3 col-xs-8">
         <a href="index.html" class="logo">
           <div class="header-avatar">
-            <img src="media/first-screen/stephanoapiolaza.jpg" alt="Foto de Perfil">
+            <img src="media/me/stephanoapiolaza.jpg" alt="Foto de Perfil">
           </div>
           <span class="point">Stephano</span>
         </a>
@@ -122,7 +122,7 @@
         <div class="col-lg-6 col-md-8 col-xs-12 full-height">
           <div class="first-screen-box">
             <div class="main-avatar">
-              <img src="media/first-screen/stephanoapiolaza.jpg" alt="">
+              <img src="media/me/stephanoapiolaza.jpg" alt="">
             </div>
             <div class="about-me">
               <div class="about-title">
@@ -574,35 +574,36 @@
 </div>
 <!-- Modal send message -->
 
-<script src="assets/jquery/jquery-2.2.3.min.js" async></script>
-<script src="assets/bootstrap/bootstrap.min.js" async></script>
-
-<script src="assets/jquery-placeholder/jquery.placeholder.min.js" async></script>
-
-<!--Isotope-->
-<script src="assets/isotope/imagesloaded.pkgd.min.js" async></script>
-<script src="assets/isotope/isotope.pkgd.min.js" async></script>
-
-<!--Gradient-->
-<script src="js/gradient/gradient.js" async></script>
+<script src="assets/jquery/jquery-2.2.3.min.js"></script>
 
 <!--jquery.custom-scroll-->
-<script src="assets/jquery.mCustomScrollbar/jquery.mCustomScrollbar.concat.min.js" async></script>
+<script src="assets/jquery.mCustomScrollbar/jquery.mCustomScrollbar.concat.min.js"></script>
+
+<script src="assets/bootstrap/bootstrap.min.js"></script>
+
+<script src="assets/jquery-placeholder/jquery.placeholder.min.js"></script>
+
+<!--Isotope-->
+<script src="assets/isotope/imagesloaded.pkgd.min.js"></script>
+<script src="assets/isotope/isotope.pkgd.min.js"></script>
+
+<!--Gradient-->
+<script src="js/gradient/gradient.js"></script>
 
 <!--social likes-->
-<script src="assets/social-likes/social-likes.min.js" async></script>
+<script src="assets/social-likes/social-likes.min.js"></script>
 
 <!--Smooth Scroll-->
-<script src="assets/smoothscroll-for-websites/SmoothScroll.js" async></script>
+<script src="assets/smoothscroll-for-websites/SmoothScroll.js"></script>
 
 <!--jqBootstrapValidation-->
-<script src="assets/contact/jqBootstrapValidation.js" async></script>
+<script src="assets/contact/jqBootstrapValidation.js"></script>
 
 <!--THEME-->
 <script src="js/theme.js" async></script>
 
 <!-- OWN JS -->
-<script src="js/contact/contact_me.js" async></script>
+<script src="js/contact/contact-me.js" async></script>
 <script src="js/custom.js" async></script>
 
 <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
