--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
         content="Sitio Web Personal, necesitas desarrollar algo y quieres dejarlo en las mejores manos. Contactame"/>
   <meta name="keywords"
         content="stephano, apiolaza, cv, curriculum, movil, idea, emprendimiento, startup, necesito, web, angular, angularjs, java, javascript, spring, tecnologia, tecnologico, php, python, laravel, react, preact, redux, ruby, wordpress, prestashop, woocommerce, gantry"/>
-  <title>Stephano Apiolaza - Debatamos ideas</title>
+  <title>Stephano Apiolaza</title>
 
   <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
@@ -76,9 +76,9 @@
       <div class="col-md-9 text-right hidden-sm hidden-xs">
         <div class="main-menu header-links">
           <ul>
+            <li><a href="#" data-toggle="modal" data-target="#contact-me-modal">Cont&aacute;ctame</a></li>
             <li><a href="#" data-toggle="modal" data-target="#about-me-modal">Acerca de mi</a></li>
             <li><a href="download/cv_stephanoapiolaza.pdf" download>Descargar CV</a></li>
-            <li><a href="#" data-toggle="modal" data-target="#contact-me-modal">Cont&aacute;ctame</a></li>
           </ul>
         </div>
       </div>
@@ -103,9 +103,9 @@
     <div class="mobile-box-flex">
       <div class="mobile-menu header-links">
         <ul>
+          <li><a href="#" data-toggle="modal" data-target="#contact-me-modal">Cont&aacute;ctame</a></li>
           <li><a href="#" data-toggle="modal" data-target="#about-me-modal">Acerca de mi</a></li>
           <li><a href="download/cv_stephanoapiolaza.pdf" download>Descargar CV</a></li>
-          <li><a href="#" data-toggle="modal" data-target="#contact-me-modal">Cont&aacute;ctame</a></li>
         </ul>
       </div>
     </div>
@@ -130,9 +130,8 @@
               </div>
               <div class="opacity-box">
                 <p>Soy Full Stack Developer, es decir, manejo un conjunto de tecnolog&iacute;as que involucra todas las
-                  capas del desarrollo de un producto.
-                  Actualmente me encuentro trabajando como Ingeniero en Software, en Santiago de Chile. Si tienes una
-                  idea de negocio y necesitas llevarla a cabo no dudes en hablar conmigo.</p>
+                  capas del desarrollo de un producto digital. Si tienes una
+                  idea de negocio y necesitas llevarla a cabo, no dudes en hablar conmigo.</p>
               </div>
             </div>
             <div class="about-me-info hidden-sm hidden-xs">
@@ -194,8 +193,8 @@
       <div class="row">
         <div class="col-md-6">
           <div class="opacity-box contact-text">
-            <p>Tienes una gran idea? Me encantar&iacute;a hacerla realidad! Escribeme y veamos como desarrollarla!
-              Solo hazlo, preguntar es gratis. No te preocupes, es sin compromiso.</p>
+            <p>Tienes una gran idea? Me encantar&iacute;a hacerla realidad! Escribeme y desarrollemos!
+             No perdamos tiempo, preguntar es gratis.</p>
           </div>
           <div class="about-me-info">
             <p class="info-row">
@@ -203,7 +202,7 @@
               <span class="opacity-box">
                                 <a href="tel:+1-203-324-5400">+(56)986984357</a>
                             </span>
-            </p>
+
             <p class="info-row">
               <span class="span-title">Email</span>
               <span class="opacity-box">
@@ -243,9 +242,9 @@
                            id="name-input"
                            placeholder="Soy.."
                            required
-                           data-validation-required-message="Invalid input">
+                           data-validation-required-message="Obligatorio">
                     <p class="help-block"></p>
-                    <p class="help-block-success">done</p>
+                    <p class="help-block-success">OK</p>
                   </div>
                 </div>
                 <div class="col-md-6">
@@ -254,12 +253,12 @@
                     <input type="email"
                            class="site-input email-input"
                            id="email-input"
-                           placeholder="mi.idea@idea.com"
+                           placeholder="exito@idea.com"
                            required
-                           data-validation-email-message="Invalid input"
-                           data-validation-required-message="Invalid input">
+                           data-validation-email-message="Email no válido"
+                           data-validation-required-message="Obligatorio">
                     <p class="help-block"></p>
-                    <p class="help-block-success">done</p>
+                    <p class="help-block-success">OK</p>
                   </div>
                 </div>
               </div>
@@ -269,18 +268,18 @@
                     <label for="textarea">Tu Mensaje</label>
                     <textarea id="textarea"
                               class="site-input textarea"
-                              placeholder="Necesito..."
+                              placeholder="Necesito una idea disruptiva que..."
                               required
-                              data-validation-required-message="Invalid input"></textarea>
+                              data-validation-required-message="Obligatorio"></textarea>
                     <p class="help-block"></p>
-                    <p class="help-block-success">done</p>
+                    <p class="help-block-success">OK</p>
                   </div>
                 </div>
               </div>
               <div class="row">
                 <div class="col-md-12">
                   <div class="submit-holder">
-                    <input class="site-btn btn-theme-blue" type="submit" value="Enviar Mensaje">
+                    <input class="site-btn btn-theme-blue" type="submit" value="Directo al Éxito">
                   </div>
                 </div>
               </div>
@@ -485,8 +484,8 @@
             <h3>Contacto</h3>
           </div>
           <div class="opacity-box">
-            <p>Tienes una gran idea? Me encantar&iacute;a hacerla realidad! Escribeme y veamos como desarrollarla!
-              Solo hazlo, preguntar es gratis. No te preocupes, es sin compromiso.</p>
+            <p>Tienes una gran idea? Me encantar&iacute;a hacerla realidad! Escribeme y desarrollemos!
+             No perdamos tiempo, preguntar es gratis.</p>
           </div>
         </div>
         <div class="form-wrapper">
@@ -500,9 +499,9 @@
                          id="name-modal"
                          placeholder="Soy..."
                          required
-                         data-validation-required-message="Invalid input">
+                         data-validation-required-message="Obligatorio">
                   <p class="help-block"></p>
-                  <p class="help-block-success">done</p>
+                  <p class="help-block-success">OK</p>
                 </div>
               </div>
               <div class="col-md-6">
@@ -511,12 +510,12 @@
                   <input type="email"
                          class="site-input email-input"
                          id="email-modal"
-                         placeholder="mi.idea@idea.com"
+                         placeholder="exito@idea.com"
                          required
-                         data-validation-email-message="Invalid input"
-                         data-validation-required-message="Invalid input">
+                         data-validation-email-message="Email no válido"
+                         data-validation-required-message="Obligatorio">
                   <p class="help-block"></p>
-                  <p class="help-block-success">done</p>
+                  <p class="help-block-success">OK</p>
                 </div>
               </div>
             </div>
@@ -526,18 +525,18 @@
                   <label for="textarea-modal">Tu Mensaje</label>
                   <textarea id="textarea-modal"
                             class="site-input textarea"
-                            placeholder="Necesito..."
+                            placeholder="Necesito una idea disruptiva que..."
                             required
-                            data-validation-required-message="Invalid input"></textarea>
+                            data-validation-required-message="Obligatorio"></textarea>
                   <p class="help-block"></p>
-                  <p class="help-block-success">done</p>
+                  <p class="help-block-success">OK</p>
                 </div>
               </div>
             </div>
             <div class="row">
               <div class="col-md-12">
                 <div class="modal-buttons">
-                  <input class="site-btn btn-theme-blue" type="submit" value="Enviar Mensaje">
+                  <input class="site-btn btn-theme-blue" type="submit" value="Directo al Éxito">
                   <a class="site-btn btn-theme-blue-tr" href="#" data-dismiss="modal" aria-hidden="true">Cerrar
                     Modal</a>
                 </div>
@@ -562,7 +561,7 @@
             <h3>Tu mensaje se ha enviado con &eacute;xito!</h3>
           </div>
           <div class="opacity-box">
-            <p>Gracias por tu interes en mi trabajo. Te contactar&eacute; cuanto antes. Estamos en contacto, amigo!</p>
+            <p>Gracias por tu interés en mi trabajo. Te contactar&eacute; cuanto antes. Estamos en contacto, amigo!</p>
           </div>
         </div>
         <div class="modal-buttons">
@@ -572,39 +571,8 @@
     </div>
   </div>
 </div>
-<!-- Modal send message -->
 
-<script src="assets/jquery/jquery-2.2.3.min.js"></script>
-
-<!--jquery.custom-scroll-->
-<script src="assets/jquery.mCustomScrollbar/jquery.mCustomScrollbar.concat.min.js"></script>
-
-<script src="assets/bootstrap/bootstrap.min.js"></script>
-
-<script src="assets/jquery-placeholder/jquery.placeholder.min.js"></script>
-
-<!--Isotope-->
-<script src="assets/isotope/imagesloaded.pkgd.min.js"></script>
-<script src="assets/isotope/isotope.pkgd.min.js"></script>
-
-<!--Gradient-->
-<script src="js/gradient/gradient.js"></script>
-
-<!--social likes-->
-<script src="assets/social-likes/social-likes.min.js"></script>
-
-<!--Smooth Scroll-->
-<script src="assets/smoothscroll-for-websites/SmoothScroll.js"></script>
-
-<!--jqBootstrapValidation-->
-<script src="assets/contact/jqBootstrapValidation.js"></script>
-
-<!--THEME-->
-<script src="js/theme.js" async></script>
-
-<!-- OWN JS -->
-<script src="js/contact/contact-me.js" async></script>
-<script src="js/custom.js" async></script>
+<script type="text/javascript" src="js/master.js"></script>
 
 <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
 <script>
